<resources>
    <string name="app_name">MyNewEPF</string>
    <string name="age">Age</string>
    <string name="account1_saving">Account 1 Saving</string>
    <string name="investment">Investment</string>
    <string-array name="age_group">
        <item>16 - 25</item>
        <item>26 - 30</item>
        <item>31 - 35</item>
        <item>36 - 40</item>
        <item>46 - 50</item>
        <item>51 - 55</item>
    </string-array>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="account_balance">Account Balance</string>

</resources>